revised pom.xml
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@994162 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -70,5 +70,12 @@ under the License.
   <properties>
     <npanday.version>${project.version}</npanday.version>
   </properties>
+  
+  <scm> 
+    <url>https://npanday.svn.codeplex.com/svn/npanday-its/trunk</url>  
+    <connection>scm:svn:https://npanday.svn.codeplex.com/svn/npanday-its/trunk</connection>  
+    <developerConnection>scm:svn:https://npanday.svn.codeplex.com/svn/npanday-its/trunk</developerConnection>  
+  </scm> 
+  
 </project>
 
