--- a/pom.xml
+++ b/pom.xml
@@ -18,16 +18,16 @@ KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations
 under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <parent>
-    <groupId>npanday</groupId>
-    <version>1.1-SNAPSHOT</version>
-    <artifactId>npanday-project</artifactId>
-  </parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
+  <groupId>npanday.its</groupId>
   <artifactId>npanday-its</artifactId>
+  <version>2.1-SNAPSHOT</version>
+  <packaging>pom</packaging>
+
+  <name>NPanday Integration Tests Parent</name>
+
   <build>
     <plugins>
       <plugin>
@@ -76,6 +76,4 @@ under the License.
     <connection>scm:svn:https://npanday.svn.codeplex.com/svn/npanday-its/trunk</connection>  
     <developerConnection>scm:svn:https://npanday.svn.codeplex.com/svn/npanday-its/trunk</developerConnection>  
   </scm> 
-  
 </project>
-
