--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,19 @@ under the License.
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <configuration>
+          <systemProperties>
+            <property>
+              <name>npanday.version</name>
+              <value>${npanday.version}</value>
+            </property>
+          </systemProperties>
+        </configuration>
+      </plugin>
+	  
     </plugins>
   </build>
   <dependencies>
