reverted version back to 1.0-SNAPSHOT
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@994172 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>npanday.its</groupId>
   <artifactId>npanday-its</artifactId>
-  <version>1.0</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>NPanday Integration Tests Parent</name>
