--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>npanday.its</groupId>
   <artifactId>npanday-its</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>pom</packaging>
 
   <name>NPanday Integration Tests Parent</name>
@@ -65,8 +65,8 @@
   </properties>
   
   <scm> 
-    <url>https://npanday.svn.codeplex.com/svn/npanday-its/tags</url>  
-    <connection>scm:svn:https://npanday.svn.codeplex.com/svn/npanday-its/tags</connection>  
-    <developerConnection>scm:svn:https://npanday.svn.codeplex.com/svn/npanday-its/tags</developerConnection>  
+    <url>https://npanday.svn.codeplex.com/svn/npanday-its/tags/npanday-its-1.0</url>  
+    <connection>scm:svn:https://npanday.svn.codeplex.com/svn/npanday-its/tags/npanday-its-1.0</connection>  
+    <developerConnection>scm:svn:https://npanday.svn.codeplex.com/svn/npanday-its/tags/npanday-its-1.0</developerConnection>  
   </scm> 
 </project>
