added distributionManagement tag.
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@994175 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -69,4 +69,13 @@
     <connection>scm:svn:https://npanday.svn.codeplex.com/svn/npanday-its/trunk/</connection>  
     <developerConnection>scm:svn:https://npanday.svn.codeplex.com/svn/npanday-its/trunk/</developerConnection>  
   </scm> 
+  
+  <distributionManagement>
+    <snapshotRepostiory>
+      <id>${snapshots}</id>
+      <name>${snapshots}</name>
+      <url>${url.deploy}</url>
+    </snapshotRepostiory>
+  </distributionManagement>
+
 </project>
