changed <snapshotRepostiory> to <snapshotRepository>.
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@994176 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -71,11 +71,11 @@
   </scm> 
   
   <distributionManagement>
-    <snapshotRepostiory>
+    <snapshotRepository>
       <id>${snapshots}</id>
       <name>${snapshots}</name>
       <url>${url.deploy}</url>
-    </snapshotRepostiory>
+    </snapshotRepository>
   </distributionManagement>
 
 </project>
