--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>npanday.its</groupId>
   <artifactId>npanday-its</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>NPanday Integration Tests Parent</name>
@@ -70,12 +70,20 @@
     <developerConnection>scm:svn:https://npanday.svn.codeplex.com/svn/npanday-its/trunk/</developerConnection>  
   </scm> 
   
-  <distributionManagement>
+<distributionManagement>
+    <repository>
+      <id>${releases}</id>
+      <name>${releases}</name>
+      <url>${url.releases}</url>
+      <layout>default</layout>
+    </repository>
     <snapshotRepository>
       <id>${snapshots}</id>
       <name>${snapshots}</name>
-      <url>${url.deploy}</url>
+      <url>${url.snapshots}</url>
+      <layout>legacy</layout>
     </snapshotRepository>
   </distributionManagement>
+
 
 </project>
