changed <layout> property of distributionManagement to "default".
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@994178 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
       <id>${snapshots}</id>
       <name>${snapshots}</name>
       <url>${url.snapshots}</url>
-      <layout>legacy</layout>
+      <layout>default</layout>
     </snapshotRepository>
   </distributionManagement>
 
