make sure the tested version gets used for plugins too
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@994224 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/ClassLibraryWithWebReference/ClassLibraryWithWebReference/pom.xml
+++ b/src/test/resources/ClassLibraryWithWebReference/ClassLibraryWithWebReference/pom.xml
@@ -16,6 +16,7 @@
       <plugin>
         <groupId>npanday.plugin</groupId>
         <artifactId>maven-compile-plugin</artifactId>
+        <version>${npanday.version}</version>
         <extensions>true</extensions>
         <configuration>
           <includeSources>
@@ -29,6 +30,7 @@
       <plugin>
         <groupId>npanday.plugin</groupId>
         <artifactId>maven-test-plugin</artifactId>
+        <version>${npanday.version}</version>
         <extensions>true</extensions>
         <configuration>
           <integrationTest>true</integrationTest>
@@ -37,6 +39,7 @@
       <plugin>
         <groupId>npanday.plugin</groupId>
         <artifactId>maven-wsdl-plugin</artifactId>
+        <version>${npanday.version}</version>
         <extensions>true</extensions>
         <executions>
           <execution>
