--- a/src/test/resources/npanday-9903/npanday-9903/pom.xml
+++ b/src/test/resources/npanday-9903/npanday-9903/pom.xml
@@ -16,6 +16,7 @@
       <plugin>
         <groupId>npanday.plugin</groupId>
         <artifactId>maven-compile-plugin</artifactId>
+        <version>${npanday.version}</version>
         <extensions>true</extensions>
         <configuration>
           <language>VB</language>
@@ -60,6 +61,7 @@
       <plugin>
         <groupId>npanday.plugin</groupId>
         <artifactId>maven-resgen-plugin</artifactId>
+        <version>${npanday.version}</version>
         <extensions>true</extensions>
         <configuration>
           <embeddedResources>
