--- a/src/test/resources/WithResourceFile/ClassLibrary1/pom.xml
+++ b/src/test/resources/WithResourceFile/ClassLibrary1/pom.xml
@@ -16,6 +16,7 @@
       <plugin>
         <groupId>npanday.plugin</groupId>
         <artifactId>maven-compile-plugin</artifactId>
+        <version>${npanday.version}</version>
         <extensions>true</extensions>
         <configuration>
           <includeSources>
@@ -28,6 +29,7 @@
       <plugin>
         <groupId>npanday.plugin</groupId>
         <artifactId>maven-test-plugin</artifactId>
+        <version>${npanday.version}</version>
         <extensions>true</extensions>
         <configuration>
           <integrationTest>true</integrationTest>
@@ -36,6 +38,7 @@
       <plugin>
         <groupId>npanday.plugin</groupId>
         <artifactId>maven-resgen-plugin</artifactId>
+        <version>${npanday.version}</version>
         <extensions>true</extensions>
         <configuration>
           <embeddedResources>
