--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,23 @@
 
   <name>NPanday Integration Tests Parent</name>
 
+  <!--
+  By default, the project just packages the tests in an artifact. To actually run them, activate the profile "run-its":
+    mvn clean test -Prun-its
+  
+  This will subject the NPanday version that matches the current ITs to the integration tests.
+  If you would like to test a different NPanday distribution, you can use the system property "npanday.version" to specify
+  the version to test:
+    mvn clean test -Prun-its -Dnpanday.version=1.1
+  -->
+
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <skip>true</skip>
           <systemProperties>
             <property>
               <name>npanday.version</name>
@@ -76,4 +87,20 @@
     <developerConnection>scm:svn:https://npanday.svn.codeplex.com/svn/npanday-its/trunk/</developerConnection>  
   </scm> 
   
+  <profiles>
+    <profile>
+      <id>run-its</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <skip>false</skip>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
