replace test project
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@994290 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/ClassLibraryWithWebReference/ClassLibraryWithWebReference/pom.xml
+++ b/src/test/resources/ClassLibraryWithWebReference/ClassLibraryWithWebReference/pom.xml
@@ -1,45 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns="http://maven.apache.org/POM/4.0.0">
   <parent>
-	<artifactId>ClassLibraryWithWebReference-parent</artifactId>
-    <groupId>NPanday.IT</groupId>
+    <artifactId>ClassLibraryWithWebReference-parent</artifactId>
+    <groupId>NPanday.ITs.ClassLibraryWithWebReference</groupId>
     <version>1.0-SNAPSHOT</version>
     <relativePath>..\pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>ClassLibraryWithWebReference</artifactId>
   <packaging>library</packaging>
-  <name>NPanday.IT : ClassLibraryWithWebReference</name>
+  <name>NPanday.ITs.ClassLibraryWithWebReference : ClassLibraryWithWebReference</name>
   <build>
     <sourceDirectory>./</sourceDirectory>
     <plugins>
       <plugin>
         <groupId>npanday.plugin</groupId>
         <artifactId>maven-compile-plugin</artifactId>
-        <version>${npanday.version}</version>
         <extensions>true</extensions>
         <configuration>
+          <frameworkVersion>2.0.50727</frameworkVersion>
           <includeSources>
             <includeSource>Class1.cs</includeSource>
             <includeSource>Properties\AssemblyInfo.cs</includeSource>
-            <includeSource>Properties\Settings.Designer.cs</includeSource>
-            <includeSource>Web References\webService\Reference.cs</includeSource>
           </includeSources>
         </configuration>
       </plugin>
       <plugin>
         <groupId>npanday.plugin</groupId>
-        <artifactId>maven-test-plugin</artifactId>
-        <version>${npanday.version}</version>
-        <extensions>true</extensions>
-        <configuration>
-          <integrationTest>true</integrationTest>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>npanday.plugin</groupId>
         <artifactId>maven-wsdl-plugin</artifactId>
-        <version>${npanday.version}</version>
         <extensions>true</extensions>
         <executions>
           <execution>
@@ -51,21 +39,13 @@
         <configuration>
           <webreferences>
             <webreference>
-              <namespace>webService</namespace>
-              <path>Web References/webService/diomedestoragelegacytransfer.wsdl</path>
-              <output>Web References/webService/</output>
+              <namespace>com.amazon.soap</namespace>
+              <path>Web References/com.amazon.soap/AmazonSearch.wsdl</path>
+              <output>Web References/com.amazon.soap</output>
             </webreference>
           </webreferences>
         </configuration>
       </plugin>
     </plugins>
   </build>
-  <dependencies>
-    <dependency>
-      <groupId>NUnit</groupId>
-      <artifactId>NUnit.Framework</artifactId>
-      <version>2.2.8.0</version>
-      <type>library</type>
-    </dependency>
-  </dependencies>
 </project>
