--- a/src/test/resources/ClassLibraryWithWebReference/ClassLibraryWithWebReference/ClassLibraryWithWebReference.csproj
+++ b/src/test/resources/ClassLibraryWithWebReference/ClassLibraryWithWebReference/ClassLibraryWithWebReference.csproj
@@ -1,14 +1,17 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{637526C9-1950-4166-A4A0-B2DB641E8079}</ProjectGuid>
+    <ProjectGuid>{560DA87D-8960-4458-A763-67362CCC38E7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ClassLibraryWithWebReference</RootNamespace>
     <AssemblyName>ClassLibraryWithWebReference</AssemblyName>
+    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -28,14 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NUnit.Framework, Version=2.2.8.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>.references\NUnit\NUnit.Framework-2.2.8.0\NUnit.Framework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.EnterpriseServices" />
-    <Reference Include="System.Web.Services" />
+    <Reference Include="System.EnterpriseServices, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=x86" />
+    <Reference Include="System.Web.Services, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -46,7 +45,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Web References\webService\Reference.cs">
+    <Compile Include="Web References\com.amazon.soap\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.map</DependentUpon>
@@ -56,20 +55,17 @@
     <WebReferences Include="Web References\" />
   </ItemGroup>
   <ItemGroup>
-    <WebReferenceUrl Include="http://service.diomedestorage.com/diomedestoragelegacytransfer.asmx">
+    <WebReferenceUrl Include="http://soap.amazon.com/schemas2/AmazonWebServices.wsdl">
       <UrlBehavior>Dynamic</UrlBehavior>
-      <RelPath>Web References\webService\</RelPath>
-      <UpdateFromURL>http://service.diomedestorage.com/diomedestoragelegacytransfer.asmx</UpdateFromURL>
+      <RelPath>Web References\com.amazon.soap\</RelPath>
+      <UpdateFromURL>http://soap.amazon.com/schemas2/AmazonWebServices.wsdl</UpdateFromURL>
       <ServiceLocationURL>
       </ServiceLocationURL>
       <CachedDynamicPropName>
       </CachedDynamicPropName>
       <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
-      <CachedSettingsPropName>ClassLibraryWithWebReference_webService_DiomedeStorageLegacyTransfer</CachedSettingsPropName>
+      <CachedSettingsPropName>ClassLibraryWithWebReference_com_amazon_soap_AmazonSearchService</CachedSettingsPropName>
     </WebReferenceUrl>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Web References\webService\diomedestoragelegacytransfer.wsdl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -77,19 +73,34 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <None Include="Web References\webService\CreateFileResponse.datasource">
+    <None Include="Web References\com.amazon.soap\AmazonSearch.wsdl" />
+    <None Include="Web References\com.amazon.soap\ListingProductDetails.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
-    <None Include="Web References\webService\diomedestoragelegacytransfer.disco" />
-    <None Include="Web References\webService\Reference.map">
+    <None Include="Web References\com.amazon.soap\MarketplaceSearch.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.amazon.soap\ProductInfo.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.amazon.soap\ProductLine.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.amazon.soap\Reference.map">
       <Generator>MSDiscoCodeGenerator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
-    <None Include="Web References\webService\UploadWithCreateFileResponse.datasource">
+    <None Include="Web References\com.amazon.soap\SellerProfile.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.amazon.soap\SellerSearch.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.amazon.soap\ShoppingCart.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="C:\Windows\Microsoft.Net\Framework\v2.0.50727\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
