--- a/src/test/resources/ClassLibraryWithWebReference/ClassLibraryWithWebReference/Properties/Settings.settings
+++ b/src/test/resources/ClassLibraryWithWebReference/ClassLibraryWithWebReference/Properties/Settings.settings
@@ -2,8 +2,8 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ClassLibraryWithWebReference.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="ClassLibraryWithWebReference_webService_DiomedeStorageLegacyTransfer" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://service.diomedestorage.com/diomedestoragelegacytransfer.asmx</Value>
+    <Setting Name="ClassLibraryWithWebReference_com_amazon_soap_AmazonSearchService" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://soap.amazon.com/onca/soap2</Value>
     </Setting>
   </Settings>
 </SettingsFile>
