--- a/src/test/resources/ClassLibraryWithWebReference/pom.xml
+++ b/src/test/resources/ClassLibraryWithWebReference/pom.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns="http://maven.apache.org/POM/4.0.0">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+         xmlns="http://maven.apache.org/POM/4.0.0">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>NPanday.ITs</groupId>
+    <artifactId>NPanday.ITs.Parent</artifactId>
+    <version>1-SNAPSHOT</version>
+  </parent>
   <groupId>NPanday.ITs.ClassLibraryWithWebReference</groupId>
   <artifactId>ClassLibraryWithWebReference-parent</artifactId>
   <packaging>pom</packaging>
