--- a/src/test/resources/pom.xml
+++ b/src/test/resources/pom.xml
@@ -23,24 +23,119 @@
   <artifactId>NPanday.ITs.Parent</artifactId>
   <version>1-SNAPSHOT</version>
   <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-enforcer-plugin</artifactId>
-        <version>1.0-alpha-4</version>
-        <executions>
-          <execution>
-            <id>enforce-plugin-versions</id>
-            <rules>
-              <requirePluginVersions>
-                <banLatest>true</banLatest>
-                <banRelease>true</banRelease>
-                <banSnapshots>false</banSnapshots>
-              </requirePluginVersions>
-            </rules>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>NPanday.Plugin.Addin.JavaBinding</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>NPanday.Plugin.Devenv.JavaBinding</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>NPanday.Plugin.Settings.JavaBinding</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>NPanday.Plugin.SysRef.JavaBinding</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>NPanday.Plugin.Msbuild.JavaBinding</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>maven-compile-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>maven-aspx-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>maven-fxcop-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>maven-install-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>maven-link-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>maven-mojo-generator-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>maven-resgen-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>maven-repository-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>maven-resolver-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>maven-test-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>maven-vsinstaller-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>maven-webapp-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>maven-xsd-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>maven-xsp-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>maven-wsdl-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>npanday.plugin</groupId>
+          <artifactId>wix-maven-plugin</artifactId>
+          <version>${npanday.version}</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
 </project>
