--- a/src/test/resources/test-unique-snapshot/pom.xml
+++ b/src/test/resources/test-unique-snapshot/pom.xml
@@ -1,31 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">  
-  <modelVersion>4.0.0</modelVersion>  
-  <groupId>npanday.its</groupId>  
-  <artifactId>test-unique-snapshot</artifactId>  
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>NPanday.ITs</groupId>
+    <artifactId>NPanday.ITs.Parent</artifactId>
+    <version>1-SNAPSHOT</version>
+  </parent>
+  <groupId>npanday.its</groupId>
+  <artifactId>test-unique-snapshot</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>library</packaging>
-    <dependencies>
+  <dependencies>
     <dependency>
       <groupId>test</groupId>
       <artifactId>test-snapshot</artifactId>
       <version>1.0-SNAPSHOT</version>
       <type>library</type>
     </dependency>
-  </dependencies>  
-  <build> 
-    <sourceDirectory>src/main/csharp</sourceDirectory>  
-    <testSourceDirectory>src/test/csharp</testSourceDirectory>  
-    <plugins> 
-      <plugin> 
-        <groupId>npanday.plugin</groupId>  
-        <artifactId>maven-compile-plugin</artifactId>  
+  </dependencies>
+  <build>
+    <sourceDirectory>src/main/csharp</sourceDirectory>
+    <testSourceDirectory>src/test/csharp</testSourceDirectory>
+    <plugins>
+      <plugin>
+        <groupId>npanday.plugin</groupId>
+        <artifactId>maven-compile-plugin</artifactId>
         <version>${npanday.version}</version>
-        <extensions>true</extensions> 
+        <extensions>true</extensions>
       </plugin>
-    </plugins> 
-  </build> 
+    </plugins>
+  </build>
   <repositories>
     <repository>
       <id>test</id>
