--- a/src/test/resources/NPanday.IT11579/pom.xml
+++ b/src/test/resources/NPanday.IT11579/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>NPanday.ITs.Parent</artifactId>
@@ -8,24 +7,10 @@
     <version>1-SNAPSHOT</version>
   </parent>
   <artifactId>NPanday.IT11579</artifactId>
-  <packaging>library</packaging>
-  <build>
-    <sourceDirectory>src/main/csharp</sourceDirectory>
-    <testSourceDirectory>src/test/csharp</testSourceDirectory>
-    <plugins>
-      <plugin>
-        <groupId>npanday.plugin</groupId>
-        <artifactId>maven-compile-plugin</artifactId>
-        <extensions>true</extensions>
-      </plugin>
-    </plugins>
-  </build>
-  <dependencies>
-    <dependency>
-      <groupId>NUnit</groupId>
-      <artifactId>NUnit.Framework</artifactId>
-      <version>2.2.8.0</version>
-      <type>library</type>
-    </dependency>
-  </dependencies>
+  <version>1.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
+  <modules>
+    <module>ClassLibrary1</module>
+    <module>ClassLibrary2</module>
+  </modules>
 </project>
