make sure property is passed through
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@994322 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,10 @@
               <name>npanday.version</name>
               <value>${npanday.version}</value>
             </property>
+            <property>
+              <name>npanday.version.force</name>
+              <value>${npanday.version.force}</value>
+            </property>
           </systemProperties>
         </configuration>
       </plugin>
