make sure the extensions are set correctly
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@994331 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/pom.xml
+++ b/src/test/resources/pom.xml
@@ -20,6 +20,14 @@
   <version>1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <build>
+    <plugins>
+      <!-- all projects need the extensions loaded -->
+      <plugin>
+        <groupId>npanday.plugin</groupId>
+        <artifactId>maven-compile-plugin</artifactId>
+        <extensions>true</extensions>
+      </plugin>
+    </plugins>
     <pluginManagement>
       <plugins>
         <plugin>
