* added additional verification for NPandayIT0021 * added maven-resgen-plugin configuration to NPandayIT0021/pom.xml to ensure resources were generated. * added fix.txt to NPanday.IT11579/src/main/resources/resgen
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@994357 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/NPandayIT0021/pom.xml
+++ b/src/test/resources/NPandayIT0021/pom.xml
@@ -11,16 +11,32 @@
   <artifactId>NPandayIT0021</artifactId>  
   <packaging>library</packaging>  
   <build> 
-    <sourceDirectory>src/main/vb</sourceDirectory>  
+    <sourceDirectory>./</sourceDirectory>  
     <plugins> 
       <plugin> 
         <groupId>npanday.plugin</groupId>  
         <artifactId>maven-compile-plugin</artifactId>  
         <extensions>true</extensions>  
         <configuration> 
-          <language>VB</language> 
+          <language>VB</language> 		  
+          <includeSources>
+            <includeSource>it0021.vb</includeSource>
+          </includeSources>
         </configuration> 
       </plugin>
+	  <plugin>
+	    <groupId>npanday.plugin</groupId>
+		<artifactId>maven-resgen-plugin</artifactId>
+		<extensions>true</extensions>
+		<configuration>
+		  <embeddedResources>
+		    <resource>
+		      <sourceFile>src/main/resources/resgen/fix.txt</sourceFile>
+			</resource>
+		  </embeddedResources>
+		</configuration>
+	  </plugin>	  
     </plugins> 
   </build> 
 </project>
+
