--- a/src/test/resources/WebAppExample/pom.xml
+++ b/src/test/resources/WebAppExample/pom.xml
@@ -2,10 +2,9 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"
          xmlns="http://maven.apache.org/POM/4.0.0">
   <parent>
-    <artifactId>WebAppExample-parent</artifactId>
-    <groupId>NPanday.IT</groupId>
-    <version>1.0-SNAPSHOT</version>
-    <relativePath>..\pom.xml</relativePath>
+    <groupId>NPanday.ITs</groupId>
+    <artifactId>NPanday.ITs.Parent</artifactId>
+    <version>1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>WebAppExample</artifactId>
