set POM fields correctly
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@994415 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/NPandayITCompilerWithArgs/pom.xml
+++ b/src/test/resources/NPandayITCompilerWithArgs/pom.xml
@@ -8,7 +8,7 @@
     <version>1-SNAPSHOT</version>
   </parent>
   <groupId>NPandayITCompilerWithArgs</groupId>
-  <artifactId>NPandayIT0001</artifactId>
+  <artifactId>NPandayITCompilerWithArgs</artifactId>
   <packaging>library</packaging>
   <build>
     <sourceDirectory>src/main/csharp</sourceDirectory>
@@ -19,7 +19,7 @@
         <extensions>true</extensions>
         <configuration>
           <includeSources>
-            <includeSource>It0001.cs</includeSource>
+            <includeSource>src/main/csharp/It0001.cs</includeSource>
           </includeSources>
         </configuration>
       </plugin>
