--- a/src/test/resources/NPandayITNetModuleDependency/dependency/pom.xml
+++ b/src/test/resources/NPandayITNetModuleDependency/dependency/pom.xml
@@ -23,9 +23,10 @@
     <artifactId>NPanday.ITs.Parent</artifactId>
     <version>1-SNAPSHOT</version>
   </parent>
-  <groupId>NPandayIT0001</groupId>
-  <artifactId>NPandayIT0001</artifactId>
-  <packaging>library</packaging>
+  <groupId>NPandayITNetModuleDependency</groupId>
+  <artifactId>dependency</artifactId>
+  <version>1.0-SNAPSHOT</version>
+  <packaging>module</packaging>
   <build>
     <sourceDirectory>src/main/csharp</sourceDirectory>
     <plugins>
