--- a/src/test/resources/NPandayITNetModuleDependency/dependency/pom.xml
+++ b/src/test/resources/NPandayITNetModuleDependency/dependency/pom.xml
@@ -22,6 +22,7 @@
     <groupId>NPanday.ITs</groupId>
     <artifactId>NPanday.ITs.Parent</artifactId>
     <version>1-SNAPSHOT</version>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
   <groupId>NPandayITNetModuleDependency</groupId>
   <artifactId>dependency</artifactId>
