--- a/src/test/resources/NPandayITNetModuleDependency/dependency/pom.xml
+++ b/src/test/resources/NPandayITNetModuleDependency/dependency/pom.xml
@@ -27,7 +27,7 @@
   <groupId>NPandayITNetModuleDependency</groupId>
   <artifactId>dependency</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>library</packaging>
+  <packaging>module</packaging>
   <build>
     <sourceDirectory>src/main/csharp</sourceDirectory>
     <plugins>
