--- a/src/test/resources/NPandayIT0004/pom.xml
+++ b/src/test/resources/NPandayIT0004/pom.xml
@@ -1,40 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project> 
-  <modelVersion>4.0.0</modelVersion>  
+<project>
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>NPanday.ITs</groupId>
     <artifactId>NPanday.ITs.Parent</artifactId>
     <version>1-SNAPSHOT</version>
-  </parent>    
-  <groupId>NPandayIT0004</groupId>  
-  <artifactId>NPandayIT0004</artifactId>  
-  <packaging>library</packaging>  
-  <dependencies> 
-    <dependency> 
-      <groupId>NUnit</groupId>  
-      <artifactId>NUnit.Framework</artifactId>  
-      <version>2.2.8.0</version>  
-      <type>library</type> 
-    </dependency> 
-  </dependencies>  
-  <build> 
-    <testSourceDirectory>src/test/csharp</testSourceDirectory>  
-    <plugins> 
-      <plugin> 
-        <groupId>npanday.plugin</groupId>  
-        <artifactId>maven-compile-plugin</artifactId>  
-        <extensions>true</extensions> 
-      </plugin>  
-      <plugin> 
-        <groupId>npanday.plugin</groupId>  
-        <artifactId>maven-test-plugin</artifactId>  
-        <configuration> 
-          <supportedRuntimes> 
-            <supportedRuntime>v2.0.50727</supportedRuntime> 
-          </supportedRuntimes> 
-        </configuration> 
-      </plugin> 
-    </plugins> 
-  </build> 
+  </parent>
+  <groupId>NPandayIT0004</groupId>
+  <artifactId>NPandayIT0004</artifactId>
+  <version>1.0-SNAPSHOT</version>
+  <packaging>library</packaging>
+  <dependencies>
+    <dependency>
+      <groupId>NUnit</groupId>
+      <artifactId>NUnit.Framework</artifactId>
+      <version>2.2.8.0</version>
+      <type>library</type>
+    </dependency>
+  </dependencies>
+  <build>
+    <testSourceDirectory>src/test/csharp</testSourceDirectory>
+    <plugins>
+      <plugin>
+        <groupId>npanday.plugin</groupId>
+        <artifactId>maven-compile-plugin</artifactId>
+        <extensions>true</extensions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
