--- a/src/test/resources/NPandayITNetModuleTransitiveDependency/cli/pom.xml
+++ b/src/test/resources/NPandayITNetModuleTransitiveDependency/cli/pom.xml
@@ -35,9 +35,16 @@
       <version>1.0-SNAPSHOT</version>
       <type>library</type>
     </dependency>
+    <dependency>
+      <groupId>NUnit</groupId>
+      <artifactId>NUnit.Framework</artifactId>
+      <version>2.2.8.0</version>
+      <type>library</type>
+    </dependency>
   </dependencies>
   <build>
     <sourceDirectory>src/main/csharp</sourceDirectory>
+    <testSourceDirectory>src/test/csharp</testSourceDirectory>
     <plugins>
       <plugin>
         <groupId>npanday.plugin</groupId>
