correct assertions for present resources
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@994443 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,8 @@
                 <!-- These fail due to NPanday issue #11729 -->
                 <exclude>**/NPandayIT0002Test.*</exclude>
                 <exclude>**/NPandayIT0003Test.*</exclude>
+                <!-- These tests are incomplete due to NPanday issue #10603 -->
+                <exclude>**/NPandayIT0020Test.*</exclude>
               </excludes>
             </configuration>
           </plugin>
