--- a/src/test/resources/NPandayIT0029/pom.xml
+++ b/src/test/resources/NPandayIT0029/pom.xml
@@ -1,43 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project> 
-  <modelVersion>4.0.0</modelVersion>  
+<project>
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>NPanday.ITs</groupId>
     <artifactId>NPanday.ITs.Parent</artifactId>
     <version>1-SNAPSHOT</version>
-  </parent>   
-  <groupId>NPandayIT0029</groupId>  
-  <artifactId>NPandayIT0029</artifactId>  
-  <packaging>library</packaging>  
-  <build> 
-    <sourceDirectory>src/main/csharp</sourceDirectory>  
-    <plugins> 
-      <plugin> 
-        <groupId>npanday.plugin</groupId>  
-        <artifactId>maven-compile-plugin</artifactId>  
-        <extensions>true</extensions> 
-      </plugin>  
-      <plugin> 
-        <groupId>npanday.plugin</groupId>  
-        <artifactId>maven-deploy-plugin</artifactId> 
-      </plugin> 
-    </plugins> 
-  </build>  
-  <distributionManagement> 
-    <snapshotRepository> 
-      <uniqueVersion>false</uniqueVersion>  
-      <id>my fake snapshot</id>  
-      <name>Fake Snapshot Repository</name>  
-      <url>file://${basedir}/target/remoteSnapshotRepo/snapshots</url>  
-      <layout>default</layout> 
-    </snapshotRepository>  
-    <repository> 
-      <uniqueVersion>false</uniqueVersion>  
-      <id>regular repo</id>  
-      <name>regular repo</name>  
-      <url>file://${basedir}/target/remoteRepo</url>  
-      <layout>default</layout> 
-    </repository> 
-  </distributionManagement> 
+  </parent>
+  <groupId>NPandayIT0029</groupId>
+  <artifactId>NPandayIT0029</artifactId>
+  <version>1.0</version>
+  <packaging>library</packaging>
+  <build>
+    <sourceDirectory>src/main/csharp</sourceDirectory>
+    <plugins>
+      <plugin>
+        <groupId>npanday.plugin</groupId>
+        <artifactId>maven-compile-plugin</artifactId>
+        <extensions>true</extensions>
+      </plugin>
+    </plugins>
+  </build>
+  <distributionManagement>
+    <repository>
+      <id>regular repo</id>
+      <name>regular repo</name>
+      <url>file://${basedir}/target/remoteRepo</url>
+      <layout>default</layout>
+    </repository>
+  </distributionManagement>
 </project>
