--- a/src/test/resources/NPandayIT0033/pom.xml
+++ b/src/test/resources/NPandayIT0033/pom.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns="http://maven.apache.org/POM/4.0.0">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+         xmlns="http://maven.apache.org/POM/4.0.0">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>NPanday.ITs</groupId>
     <artifactId>NPanday.ITs.Parent</artifactId>
     <version>1-SNAPSHOT</version>
-  </parent>   
+  </parent>
   <groupId>NPandayIT0033</groupId>
   <artifactId>NPandayIT0033</artifactId>
+  <version>1.0-SNAPSHOT</version>
   <packaging>exe</packaging>
   <build>
     <sourceDirectory>src/main/vb</sourceDirectory>
@@ -30,7 +32,7 @@
       <groupId>NUnit</groupId>
       <artifactId>NUnit.Framework</artifactId>
       <version>2.2.8.0</version>
-      <type>library</type>  
+      <type>library</type>
     </dependency>
   </dependencies>
 </project>
