--- a/src/test/resources/NPandayIT0033/pom.xml
+++ b/src/test/resources/NPandayIT0033/pom.xml
@@ -10,7 +10,7 @@
   <groupId>NPandayIT0033</groupId>
   <artifactId>NPandayIT0033</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>exe</packaging>
+  <packaging>library</packaging>
   <build>
     <sourceDirectory>src/main/vb</sourceDirectory>
     <testSourceDirectory>src/test/csharp</testSourceDirectory>
