--- a/src/test/resources/NPandayIT0035/pom.xml
+++ b/src/test/resources/NPandayIT0035/pom.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns="http://maven.apache.org/POM/4.0.0">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+         xmlns="http://maven.apache.org/POM/4.0.0">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>NPanday.ITs</groupId>
     <artifactId>NPanday.ITs.Parent</artifactId>
     <version>1-SNAPSHOT</version>
-  </parent>   
+  </parent>
   <artifactId>NPandayIT0035</artifactId>
   <groupId>NPandayIT0035</groupId>
   <packaging>exe</packaging>
   <build>
     <sourceDirectory>src/main/vb</sourceDirectory>
-    <testSourceDirectory>src/test/vb</testSourceDirectory>
     <plugins>
       <plugin>
         <groupId>npanday.plugin</groupId>
@@ -21,7 +21,6 @@
           <language>VB</language>
           <rootNamespace>it0035</rootNamespace>
           <main>it0035.Module1</main>
-          <doc>it0035.xml</doc>
           <imports>
             <import>Microsoft.VisualBasic</import>
             <import>System</import>
@@ -38,12 +37,4 @@
       </plugin>
     </plugins>
   </build>
-  <dependencies> 
-    <dependency> 
-      <groupId>NUnit</groupId>  
-      <artifactId>NUnit.Framework</artifactId>  
-      <version>2.2.8.0</version>  
-      <type>library</type> 
-    </dependency> 
-  </dependencies> 
 </project>
