--- a/src/test/resources/test-non-unique-snapshot/pom.xml
+++ b/src/test/resources/test-non-unique-snapshot/pom.xml
@@ -35,6 +35,12 @@
       <version>1.0-SNAPSHOT</version>
       <type>library</type>
     </dependency>
+	<dependency>
+      <groupId>NUnit</groupId>
+      <artifactId>NUnit.Framework</artifactId>
+      <version>2.2.8.0</version>
+      <type>library</type>
+    </dependency>
   </dependencies>
   <build>
     <sourceDirectory>src/main/csharp</sourceDirectory>
