--- a/src/test/resources/NPandayIT0020/pom.xml
+++ b/src/test/resources/NPandayIT0020/pom.xml
@@ -13,12 +13,28 @@
   <version>1.1-SNAPSHOT</version>
   <name>it0020</name>
   <build>
+   <resources>
+      <resource>
+        <directory>./</directory>
+        <includes>
+          <include>src/main/resources/resgen/fix.gif</include>
+		  <include>src/main/resources/resgen/my-prop.x-properties</include>
+        </includes>
+      </resource>
+    </resources>
     <sourceDirectory>src/main/csharp</sourceDirectory>
     <plugins>
       <plugin>
         <groupId>npanday.plugin</groupId>
         <artifactId>maven-compile-plugin</artifactId>
         <extensions>true</extensions>
+      </plugin>
+	  <plugin>
+        <groupId>npanday.plugin</groupId>
+        <artifactId>maven-resgen-plugin</artifactId>
+        <version>${npanday.version}</version>
+        <extensions>true</extensions>
+        <configuration/>
       </plugin>
     </plugins>
   </build>
