completely replace test library, seems codeplex can't delete an svn property once set
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@994688 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/NPandayIT12940/pom.xml
+++ b/src/test/resources/NPandayIT12940/pom.xml
@@ -37,7 +37,7 @@
     </dependency>
     <dependency>
       <groupId>test</groupId>
-      <artifactId>TestLib</artifactId>
+      <artifactId>TestLibrary</artifactId>
       <version>1.0.0.0</version>
       <type>library</type>
     </dependency>
