--- a/src/test/resources/NPandayIT13018-TransDependency/pom.xml
+++ b/src/test/resources/NPandayIT13018-TransDependency/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright 2005 Exist Global
+    Copyright 2010
     
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -20,8 +20,8 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">  
   <modelVersion>4.0.0</modelVersion>  
   <groupId>test</groupId>  
-  <artifactId>ladder1</artifactId>  
-  <version>2.0.0.0</version>
+  <artifactId>NPandayIT13018</artifactId>  
+  <version>1.0.0.0</version>
   <packaging>library</packaging>
     <dependencies>
     <dependency>
@@ -29,10 +29,16 @@
       <artifactId>NUnit.Framework</artifactId>
       <version>2.2.8.0</version>
       <type>library</type>
-    </dependency>  
+    </dependency>
     <dependency>
       <groupId>test</groupId>
-      <artifactId>ladder2</artifactId>
+      <artifactId>translib2</artifactId>
+      <version>1.0.0.0</version>
+      <type>library</type>
+    </dependency>
+    <dependency>
+      <groupId>test</groupId>
+      <artifactId>transA</artifactId>
       <version>1.0.0.0</version>
       <type>library</type>
     </dependency>
@@ -48,10 +54,10 @@
       </plugin>
     </plugins> 
   </build>
-  <repositories>
+ <repositories>
     <repository>
-      <id>test-repo</id>
-      <url>file:${basedir}/repository</url>
+      <id>test</id>
+      <url>file:${basedir}/test-repo</url>
     </repository>
   </repositories>  
 </project>
