--- a/src/test/resources/NPandayIT12940/pom.xml
+++ b/src/test/resources/NPandayIT12940/pom.xml
@@ -19,12 +19,11 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <!--<parent>
+  <parent>
     <groupId>NPanday.ITs</groupId>
     <artifactId>NPanday.ITs.Parent</artifactId>
     <version>1-SNAPSHOT</version>
-  </parent>-->
-  <groupId>npanday.its</groupId>
+  </parent>
   <artifactId>test-mixed-versions</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>library</packaging>
