restructure ITs to have a defined order, and bootstrap by installing the parent POM so it can be located from any tests
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@994725 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -102,13 +102,9 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
               <skip>false</skip>
-              <excludes>
-                <!-- These fail due to NPanday issue #11729 -->
-                <exclude>**/NPandayIT0002Test.*</exclude>
-                <exclude>**/NPandayIT0003Test.*</exclude>
-                <!-- Fails due to NPanday issue #11732 -->
-                <exclude>**/NPandayIT0033Test.*</exclude>
-              </excludes>
+              <includes>
+                <include>**/IntegrationTestSuite.java</include>
+              </includes>
             </configuration>
           </plugin>
         </plugins>
