--- a/src/test/resources/NPanday11480/NPanday11480/pom.xml
+++ b/src/test/resources/NPanday11480/NPanday11480/pom.xml
@@ -42,7 +42,7 @@
       <groupId>System.Web.Mvc</groupId>
       <artifactId>System.Web.Mvc</artifactId>
       <version>2.0.0.0</version>
-      <type>gac</type>
+      <type>gac_msil</type>
       <classifier>31bf3856ad364e35</classifier>
     </dependency>
     <dependency>
