pass on system property
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@994861 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,10 @@
               <name>npanday.version.force</name>
               <value>${npanday.version.force}</value>
             </property>
+            <property>
+              <name>debug.maven</name>
+              <value>${debug.maven}</value>
+            </property>
           </systemProperties>
         </configuration>
       </plugin>
