change version to next development version
git-svn-id: https://svn.apache.org/repos/asf/incubator/npanday/npanday-its/trunk@994872 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>npanday.its</groupId>
   <artifactId>npanday-its</artifactId>
-  <version>1.2</version>
+  <version>1.2.1-SNAPSHOT</version>
 
   <name>NPanday Integration Tests Parent</name>
 
